# pioneer

./: .gitignore  Dockerfile  Dockerfile2  README.md  ROI.py  bashrc  config  docker-compose.yml  dockerfile  entrypoint.sh  id_ed25519  id_ed25519.pub  pioneer.py  pioneer_checkpoint.pth  pioneer_realworld.py  pioneer_v1.ipynb  pioneer_v2.ipynb  pioneer_visual.py  requirements.txt
ConeDetection/ORB/: detectCone.py  detectCone_SIFT_RatioTest.py  detectHarryPotter.py
ConeDetection/content/: README.roboflow.txt  data.yaml  setupJasminInContentRoboflow.py  train.ipynb
ConeDetection/content/train/: labels.cache
ConeDetection/content/valid/: labels.cache
ConeDetection/detectColour/: detectAll.py  detectRedColourImage.py  detectRedColourVideo.py  detectYellowColourImage.py  detectYellowColourVideo.py  fcnDetectRedBins.py  fcnDetectRedLittleCones.py  fcnDetectTallCones.py  fcnDetectYellowCones.py  fcn_rect2cornersInRect1.py  identifyHSV.py
src/: requirements.txt
src/aria_bringup/: CMakeLists.txt  package.xml
src/pioneer_bringup/: package.xml  setup.cfg  setup.py
src/pioneer_core/: package.xml  setup.cfg  setup.py
src/pioneer_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/pioneer_image_recognition/: package.xml  setup.cfg  setup.py
src/pioneer_navigation/: package.xml  setup.cfg  setup.py
src/pioneer_overlay/: ._package.xml  CMakeLists.txt  package.xml
src/pioneer_overlay/src/: pioneer_overlay.cpp
src/pioneer_rosbags/: package.xml  setup.cfg  setup.py
src/pioneer_teleop/: package.xml  setup.cfg  setup.py
(+761 files in other folders)
